Delete buttons - Switch from transparent background values because sometimes the backgrounds stack up and you get undesirable darker colors, and fix .dark overrides for @theme inline vars, based on using a dark mode background for delete buttons

--- a/resources/css/ui.css
+++ b/resources/css/ui.css
@@ -30,9 +30,9 @@
     --color-ui-accent-text: var(--theme-color-ui-accent-text);
     --color-switch-bg: var(--theme-color-switch-bg);
 
-    --color-warning-bg: oklch(from var(--color-red-500) l c h / 6%);
+    --color-warning-bg: var(--color-red-50);
     --color-warning: var(--color-red-600);
-    --color-success-bg: oklch(from var(--color-green-500) l c h / 6%);
+    --color-success-bg: var(--color-green-50);
     --color-success: var(--color-green-600);
 
     /* Temp */
@@ -88,14 +88,6 @@
     --color-dark-gray: #404040;
 }
 
-.dark {
-    @theme inline {
-        --color-primary-hover: color-mix(in oklch, var(--color-primary) 100%, white 30%);
-        --color-success: var(--color-green-500);
-        --color-gray-950: hsl(240deg 7% 8%);
-    }
-}
-
 @theme {
     --text-4xs: 0.4rem;
     --text-3xs: 0.5rem;
@@ -135,6 +127,11 @@
 }
 
 .dark {
+    --color-primary-hover: color-mix(in oklch, var(--color-primary) 100%, white 30%);
+    --color-gray-950: hsl(240deg 7% 8%);
+    --color-warning-bg: oklch(from var(--color-red-500) 20% 8% h);
+    --color-success-bg: oklch(from var(--color-green-500) 20% 8% h);
+    --color-success: var(--color-green-500);
     --color-button-active: hsl(from var(--color-gray-700) h s l / 0.45);
 }
 
